--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,26 +7,26 @@
     android:background="#F5F5DC"
     android:padding="16dp">
 
+
     <TextView
         android:id="@+id/tytul"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#ffffff"
-        android:background="#A52A2A"
         android:padding="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:textSize="18sp"
+        android:background="#A52A2A"
         android:text="Gra w kości. Autor: Mikołaj Mikoś"
-        />
+        android:textColor="#ffffff"
+        android:textSize="18sp"/>
 
     <Button
         android:id="@+id/button_rzut"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#D2691E"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:background="#D2691E"
         android:text="RZUĆ KOŚĆMI"/>
 
     <LinearLayout
@@ -36,58 +36,105 @@
 
         <TextView
             android:id="@+id/rzut1"
-            android:background="#ffffff"
-            android:text="?"
-            android:gravity="center"
             android:layout_width="57dp"
             android:layout_height="60dp"
             android:layout_margin="9dp"
+            android:gravity="center"
             android:padding="20dp"
+            android:background="#ffffff"
+            android:text="?"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/rzut2"
-            android:background="#ffffff"
-            android:text="?"
-            android:gravity="center"
             android:layout_width="57dp"
             android:layout_height="60dp"
             android:layout_margin="9dp"
+            android:gravity="center"
             android:padding="20dp"
+            android:background="#ffffff"
+            android:text="?"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/rzut3"
-            android:background="#ffffff"
-            android:text="?"
-            android:gravity="center"
             android:layout_width="57dp"
             android:layout_height="60dp"
             android:layout_margin="9dp"
+            android:gravity="center"
             android:padding="20dp"
+            android:background="#ffffff"
+            android:text="?"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/rzut4"
-            android:background="#ffffff"
-            android:text="?"
-            android:gravity="center"
             android:layout_width="57dp"
             android:layout_height="60dp"
             android:layout_margin="9dp"
+            android:gravity="center"
             android:padding="20dp"
+            android:background="#ffffff"
+            android:text="?"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/rzut5"
-            android:background="#ffffff"
-            android:text="?"
-            android:gravity="center"
             android:layout_width="57dp"
             android:layout_height="60dp"
             android:layout_margin="9dp"
+            android:gravity="center"
             android:padding="20dp"
+            android:background="#ffffff"
+            android:text="?"
             android:textSize="18sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/dice1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/em"
+            />
+
+        <ImageView
+            android:id="@+id/dice2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="25dp"
+            android:src="@drawable/em"
+            />
+
+        <ImageView
+            android:id="@+id/dice3"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="30dp"
+            android:src="@drawable/em"
+            />
+
+        <ImageView
+            android:id="@+id/dice4"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/em"
+            />
+
+        <ImageView
+            android:id="@+id/dice5"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="25dp"
+            android:src="@drawable/em"
+            />
 
     </LinearLayout>
 
@@ -98,6 +145,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:text="Wynik tego losowania: 0" />
+    <!--        android:textColor="#ffffff"-->
 
     <TextView
         android:id="@+id/wynik_gry"
@@ -106,6 +154,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:text="Wynik gry: 0" />
+    <!--        android:textColor="#ffffff"-->
 
     <TextView
         android:id="@+id/liczba_rzutow"
@@ -114,14 +163,18 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:text="Liczba rzutów: 0" />
+    <!--        android:textColor="#ffffff"-->
 
     <Button
         android:id="@+id/button_reset"
-        android:background="#D2691E"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:background="#D2691E"
         android:text="RESETUJ WYNIK"/>
+
+
+
 
 </LinearLayout>
