--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,30 +3,21 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#F5F5DC"
-    android:padding="16dp">
+    style="@style/MainLayoutStyle">
 
 
     <TextView
         android:id="@+id/tytul"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="#A52A2A"
-        android:text="Gra w kości. Autor: Mikołaj Mikoś"
-        android:textColor="#ffffff"
-        android:textSize="18sp"/>
+        style="@style/TitleTextStyle"
+        android:text="Gra w kości. Autor: Mikołaj Mikoś"/>
 
     <Button
         android:id="@+id/button_rzut"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="#D2691E"
+        style="@style/ButtonStyle"
         android:text="RZUĆ KOŚĆMI"/>
 
     <LinearLayout
@@ -36,58 +27,28 @@
 
         <TextView
             android:id="@+id/rzut1"
-            android:layout_width="57dp"
-            android:layout_height="60dp"
-            android:layout_margin="9dp"
-            android:gravity="center"
-            android:padding="20dp"
-            android:background="#ffffff"
-            android:text="?"
-            android:textSize="18sp" />
+            style="@style/TextStyle"
+            android:text="?"/>
 
         <TextView
             android:id="@+id/rzut2"
-            android:layout_width="57dp"
-            android:layout_height="60dp"
-            android:layout_margin="9dp"
-            android:gravity="center"
-            android:padding="20dp"
-            android:background="#ffffff"
-            android:text="?"
-            android:textSize="18sp" />
+            style="@style/TextStyle"
+            android:text="?"/>
 
         <TextView
             android:id="@+id/rzut3"
-            android:layout_width="57dp"
-            android:layout_height="60dp"
-            android:layout_margin="9dp"
-            android:gravity="center"
-            android:padding="20dp"
-            android:background="#ffffff"
-            android:text="?"
-            android:textSize="18sp" />
+            style="@style/TextStyle"
+            android:text="?"/>
 
         <TextView
             android:id="@+id/rzut4"
-            android:layout_width="57dp"
-            android:layout_height="60dp"
-            android:layout_margin="9dp"
-            android:gravity="center"
-            android:padding="20dp"
-            android:background="#ffffff"
-            android:text="?"
-            android:textSize="18sp" />
+            style="@style/TextStyle"
+            android:text="?"/>
 
         <TextView
             android:id="@+id/rzut5"
-            android:layout_width="57dp"
-            android:layout_height="60dp"
-            android:layout_margin="9dp"
-            android:gravity="center"
-            android:padding="20dp"
-            android:background="#ffffff"
-            android:text="?"
-            android:textSize="18sp" />
+            style="@style/TextStyle"
+            android:text="?"/>
 
     </LinearLayout>
 
@@ -101,7 +62,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
-            android:src="@drawable/em"
+            android:src="@drawable/d0"
             />
 
         <ImageView
@@ -109,7 +70,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="25dp"
-            android:src="@drawable/em"
+            android:src="@drawable/d0"
             />
 
         <ImageView
@@ -117,7 +78,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="30dp"
-            android:src="@drawable/em"
+            android:src="@drawable/d0"
             />
 
         <ImageView
@@ -125,7 +86,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
-            android:src="@drawable/em"
+            android:src="@drawable/d0"
             />
 
         <ImageView
@@ -133,7 +94,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="25dp"
-            android:src="@drawable/em"
+            android:src="@drawable/d0"
             />
 
     </LinearLayout>
@@ -142,36 +103,28 @@
         android:id="@+id/wynik_losowania"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        style="@style/ResultStyle"
         android:text="Wynik tego losowania: 0" />
-    <!--        android:textColor="#ffffff"-->
 
     <TextView
         android:id="@+id/wynik_gry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        style="@style/ResultStyle"
         android:text="Wynik gry: 0" />
-    <!--        android:textColor="#ffffff"-->
 
     <TextView
         android:id="@+id/liczba_rzutow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        style="@style/ResultStyle"
         android:text="Liczba rzutów: 0" />
-    <!--        android:textColor="#ffffff"-->
 
     <Button
         android:id="@+id/button_reset"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="#D2691E"
+        style="@style/ButtonStyle"
         android:text="RESETUJ WYNIK"/>
 
 
